oop_mro/tests/trybuild/fail_as_base_ambiguous.stderr
warning: use of deprecated constant `_::__OOP_MRO_WARNING`: ambiguous base `Root` in class `Diamond`: `as_base::<Root>()` is unavailable because the target is not unique; use path-directed casts such as `as_base_via::<Left, Root>()`, `as_base_via::<Right, Root>()`
 --> tests/trybuild/fail_as_base_ambiguous.rs:3:1
  |
3 | / oop_class! {
4 | |     class Root {}
5 | |     class Left: Root {}
6 | |     class Right: Root {}
7 | |     class Diamond: Left, Right {}
8 | | }
  | |_^
  |
  = note: `#[warn(deprecated)]` on by default
  = note: this warning originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Diamond: OopBase<Root>` is not satisfied
  --> tests/trybuild/fail_as_base_ambiguous.rs:12:21
   |
12 |     let _ = diamond.as_base::<Root>();
   |                     ^^^^^^^ unsatisfied trait bound
   |
help: the trait `OopBase<Root>` is not implemented for `Diamond`
  --> tests/trybuild/fail_as_base_ambiguous.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Root {}
 5 | |     class Left: Root {}
 6 | |     class Right: Root {}
 7 | |     class Diamond: Left, Right {}
   | |_________________^
help: the following other types implement trait `OopBase<Target>`
  --> tests/trybuild/fail_as_base_ambiguous.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Root {}
 5 | |     class Left: Root {}
 6 | |     class Right: Root {}
 7 | |     class Diamond: Left, Right {}
   | |                 ^
   | |                 |
   | |                 `Diamond` implements `OopBase<Diamond>`
   | |_________________`Diamond` implements `OopBase<Left>`
   |                   `Diamond` implements `OopBase<Right>`
note: required by a bound in `as_base`
  --> src/lib.rs
   |
   |     fn as_base<Target>(&self) -> &Target
   |        ------- required by a bound in this associated function
   |     where
   |         Self: OopBase<Target>,
   |               ^^^^^^^^^^^^^^^ required by this bound in `OopBaseAccess::as_base`
   = note: this error originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)
